--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-node-modules
+# Dependency directories
+node_modules/
+
+# Logs
+/logs
 *.log
+
+# IDE / Editor
 .idea
+.vscode
+
+# macOS
 .DS_store
