--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prettier:fix": "prettier --write --list-different .",
     "lint:js": "eslint --ext \".js\" --ignore-path .gitignore .",
     "lint": "npm run lint:js && npm run prettier",
-    "lint:fix": "npm run prettier:fix && npm run lint:js -- --fix"
+    "lint:fix": "npm run prettier:fix && npm run lint:js -- --fix",
+    "serve": "parcel ./upload/index.html"
   },
   "lint-staged": {
     "*.{ts,js}": [
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
+    "parcel": "^2.6.2",
     "prettier": "2.6.2"
   }
 }
